[package]
name = "epd-yrd0750ryf665f60"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics-core = { version = "0.4", optional = true }
embedded-graphics-simulator = { version = "0.8.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
default = ["graphics"]

graphics = ["embedded-graphics-core"]
simulator = ["graphics", "embedded-graphics-simulator"]
